Fixing #2 - Fix swatch only showing text behind swatch

--- a/angularjs-color-picker.css
+++ b/angularjs-color-picker.css
@@ -4,7 +4,7 @@
  *
  * Copyright 2015 ruhley
  *
- * 2015-03-18 11:38:38
+ * 2015-03-18 11:57:39
  *
  */
 .color-picker-wrapper {
@@ -14,6 +14,8 @@
   width: 35px;
 }
 .color-picker-wrapper.color-picker-swatch-only .color-picker-input {
+  padding-left: 33px;
+  padding-right: 0;
   width: 35px;
 }
 .color-picker-wrapper .color-picker-input-swatch {
